--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a>
 </body>
 </html>
