--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a>
-</body>
+	<body>
+		<h1>Hello World</h1>
+		<p>I'm hosted with GitHub Pages.</p>
+		<p><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a> - A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</p>
+	</body>
 </html>
