--- a/index.html
+++ b/index.html
@@ -1,8 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<!-- Bootstrap CSS -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+		
+		<title>Stefanie Dao @JCSD</title>
+	</head>
+
 	<body>
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
-		<p><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a> - A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</p>
+		<table>
+			<th>
+			Projects
+			</th>
+			<tr>
+				<td><a href="https://stefaniedaojcsd.github.io/sight-words"><img src="images/icon_sight-words.png"></a></td>
+				<td><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a></td>
+				<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
+			</tr>
+		</table>
+		
+	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 	</body>
 </html>
