--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<tr>
 				<td><a href="https://stefaniedaojcsd.github.io/sight-words"><img src="images/icon_sight-words.png"></a></td>
 				<td><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a></td>
+				<td>Last updated: November 11, 2021</td>
 				<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
 			</tr>
 		</table>
