--- a/index.html
+++ b/index.html
@@ -14,16 +14,27 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>I'm hosted with GitHub Pages.</p>
-		<table>
-			<th>
-			Projects
-			</th>
-			<tr>
-				<td><a href="https://stefaniedaojcsd.github.io/sight-words"><img src="images/icon_sight-words.png"></a></td>
-				<td><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a></td>
-				<td>Last updated: November 11, 2021</td>
-				<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
-			</tr>
+		
+		<h2>Projects</h2>
+			
+		<table class="table table-striped w-auto">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Title</th>
+					<th>Last Updated</th>
+					<th style="width:50%">Description</th>
+				</tr>
+			</thead>
+			
+			<tbody>
+				<tr>
+					<th scope="row"><a href="https://stefaniedaojcsd.github.io/sight-words"><img src="images/icon_sight-words.png"></a></th>
+					<td><a href="https://stefaniedaojcsd.github.io/sight-words">Sight Words</a></td>
+					<td>November 11, 2021</td>
+					<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
+				</tr>
+			</tbody>
 		</table>
 		
 	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
