--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1">		
 		<title>Stefanie Dao @JCSD</title>
 	</head>
 
@@ -34,6 +30,10 @@
 					<td>November 15, 2021</td>
 					<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
 				</tr>
+				<tr>
+					<th colspan="2"><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule">JHS Bell Schedule</a></th>
+					<td>November 23, 2021</td>
+					<td>Dynamically updating webpage that displays the current bell schedule for Johnston HS.</td>
 			</tbody>
 		</table>
 		
