--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
 				</tr>
 				<tr>
-					<th colspan="2"><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule">JHS Bell Schedule</a></th>
+					<th colspan="2"><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule/index.html">JHS Bell Schedule</a></th>
 					<td>November 23, 2021</td>
 					<td>Dynamically updating webpage that displays the current bell schedule for Johnston HS.</td>
 			</tbody>
