--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 					<td>A basic drag-and-drop game for elementary schoolers to learn sight words. Content contributed by Chad Kennelly and Maggie Blanchard, Johnston Community School District, Johnston, IA, 2021.</td>
 				</tr>
 				<tr>
-					<th colspan="2"><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule/index.html">JHS Bell Schedule</a></th>
+					<th scope="row"><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule/index.html"><img src="images/icon_fireJ.png"></a></th>
+					<td><a href="https://stefaniedaojcsd.github.io/jhs-bell-schedule/index.html">JHS Bell Schedule</a></td>
 					<td>November 23, 2021</td>
 					<td>Dynamically updating webpage that displays the current bell schedule for Johnston HS.</td>
 			</tbody>
