--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<tbody>
 				<tr>
 					<th scope="row"><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide"><img src="images/icon_helpdesk.png"></a></th>
-					<td><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide/ipad_help_guide_11092022.pdf">JCSD iPad Help Guide</a></td>
+					<td><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide/index.html">JCSD iPad Help Guide</a></td>
 					<td>November 9, 2022</td>
 					<td>Help guide for students and parents for troubleshooting iPad issues at home.</td>
 				</tr>
