--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 			<tbody>
 				<tr>
-					<th scope="row"><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide"><img src="images/icon_helpdesk.png"></a></th>
+					<th scope="row"><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide"><img src="images/icon_help-guide-cover.png"></a></th>
 					<td><a href="https://stefaniedaojcsd.github.io/jcsd-ipad-help-guide/ipad_help_guide_11092022.pdf">JCSD iPad Help Guide</a></td>
 					<td>November 9, 2022</td>
 					<td>Help guide for students and parents troubleshooting iPad issues at home.</td>
