--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
 		
 	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
+		<h2>Documents</h2>
+		<a href="https://stefaniedaoJCSD.github.io/jcsd-ipad-setup-25/2025_JHS_iPadSetup.pdf">2025 JHS iPad Setup</a>
+		<a href="https://stefaniedaoJCSD.github.io/jcsd-ipad-setup-25/2025_JMS_iPadSetup.pdf">2025 JMS iPad Setup</a>
+		<a href="https://stefaniedaoJCSD.github.io/jcsd-ipad-setup-25/2025_SMS_iPadSetup.pdf">2025 SMS iPad Setup</a>
+		
 	</body>
 </html>
